# bpo-dashboard

./: .gitignore  Cargo.toml  README.md  config.example.json  run_dashboard.ps1  run_dashboard.sh
frontend/: index.html
src/: api.rs  esi.rs  main.rs  models.rs
