[package]
name = "bpo-dashboard"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"